# misc

./: .gitignore  README.md
Bash/: encode_mp3s.sh  remove_ubuntu_repos_from_apt.sh
C/: fibonacci.c
Clojure/: cljunit.clj
CoffeeScript/: dijkstra_algorithm.coffee  dijkstra_algorithm.coffee~
Dart/: dijkstra_algorithm.dart
Elm/: clock.elm  quicksort.elm
Elm/eunit/: TODO  elm-package.json
Go/: tree.go
Go/datastructures/: go.mod  main.go
Go/pr-reviewer/: ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  TODO  config.yaml  go.mod  go.sum
Haskell/: sorting_algorithms.hs
Java/: FunctionalJavaExample.java
JavaScript/: Monte_Carlo_method.html  annotations.js  array_splice.html  balance.parantheses.js  bulk_download_Coursera_videos.js  color_selector.html  constructor.arguments.expansion.js  delicious_links.html  dijkstra_algorithm.js  document_shingles.js  download.own.packt.books.js  fifteen_puzzle.html  function.name.js  function_args.js  generate.sequences.js  get_video_download_links_from_coursera.js  keplers_laws.html  levenshtein_distance.js  map_as_method.js  map_reduce.js  memoize.js  merge_object.js  mixup_page_animation.js  object_delve.js  promisify_require.js  rhino_calculator.js  running.command.node.js  speech_api_demo.js  string_search.js  tail_recursion_optimization.js  text_search_and_highlighting.html  top_languages.js  unuglify.js  uuid.js  webcrawler.js  xss_demo.html
JavaScript/BrowserTesting/: options.txt
JavaScript/Facebook.Album.Viewer/: album_creator.js  template.html
JavaScript/FronteersAttendees/: fronteers_attendees_stats.js  report_template.html
JavaScript/Mandelbrot/: index.html
JavaScript/Markdown.Book.Template/: compile.book.sh  index.js  package.json
JavaScript/MyTrips/: bower.json  grab_booking_info.js
JavaScript/PageSentiment/: CREDITS  TODO  afinn-111.json  bower.json  content.js  manifest.json  sentiment.html  sentiment.js
JavaScript/Pendulum/: TODO  display.js  index.html  main.js  parameters.js  pendulum.html  pendulum.js  physics.js  simulation.js
JavaScript/Redux/: combine.reducers.js
JavaScript/Rx.js/: rx.js.observable.flatMap.js  rx.js.observable.interval.js  rx.js.observable.merge.js
JavaScript/Simulations/: TODO  display.js  main.js  parameters.js  physics.js  simulation.js
JavaScript/Socket.IO.Clock/: index.html  server.js
JavaScript/Sound.Detection/: .gitignore  TODO  bower.json  (+1 more)
Prolog/: even.pl
Python/: archive_github_account.py  fetch_hyperlinks.py  fetch_rss_feed.py  progress_bar.py  python_selenium_minimalistic_scenario.py
Refal/: palindrom.ref
Ruby/: apartment_watcher.rb  ascii_binary_conversion.rb  cd_grabber.rb  couchrest_api_example.rb  flatten_directories.rb  java_test_explorer.rb  javascript_jabber_episodes_downloader.rb  replace_tabs.rb  skill_advisor.rb
Rust/: .gitignore  inheritance-demo.rs  palindrom.rs
Rust/aes-cryptor/: Cargo.toml  README.md
Rust/aes-cryptor/src/: lib.rs  main.rs
Rust/aes-cryptor/src/aes/: cipher.rs  key_expansion.rs  mod.rs  tables.rs  transformations.rs
Rust/aes-cryptor/testing/: README.md  generate_test_files.sh  large.txt  large.txt.dec  large.txt.enc  sample.txt
Rust/aes-cryptor/tests/: integration_tests.rs  integration_tests.txt
Rust/cognitor/: Cargo.toml  README.md  TODO
Rust/cognitor/src/: config.rs  executor.rs  llm.rs  main.rs
Rust/elysium/: .gitignore  ALGORITHMS.md  API.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DOCS.md  QUICKSTART.md  README.md  SECURITY.md  USER_GUIDE.md
Rust/elysium/elysium-client/: Cargo.toml
Rust/elysium/elysium-client/src/: lib.rs  main.rs  rpc.rs  server.rs
Rust/elysium/elysium-core/: Cargo.toml
Rust/elysium/elysium-core/src/: account.rs  block.rs  blockchain.rs  error.rs  lib.rs  transaction.rs
Rust/elysium/elysium-core/tests/: integration_test.rs
Rust/elysium/elysium-node/: Cargo.toml
Rust/elysium/elysium-node/src/: lib.rs  main.rs  miner.rs  network.rs  node.rs
Rust/elysium/elysium-sdk/: Cargo.toml
Rust/elysium/elysium-sdk/src/: client.rs  error.rs  lib.rs
Rust/elysium/examples/: basic_usage.rs  sdk_usage.rs
Rust/ferrite/: Cargo.toml  README.md
Rust/ferrite/src/: app.rs  config.rs  main.rs  shell.rs  terminal.rs  ui.rs  utils.rs
Rust/library-service/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
Rust/library-service/docs/: AI_AGENT_GUIDE.md  API_EXAMPLES.md  ARCHITECTURE.md  AUTHENTICATION.md  CACHING.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICK_START.md
Rust/library-service/k8s/: app-deployment.yaml  configmap.yaml  ingress.yaml  kafka-deployment.yaml  namespace.yaml  postgres-deployment.yaml
Rust/library-service/migrations/: 001_initial_schema.sql  002_add_password_to_users.sql
Rust/library-service/scripts/: send-kafka-event.sh
Rust/library-service/src/: config.rs  error.rs  lib.rs  main.rs
Rust/library-service/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
Rust/library-service/src/cache/: mod.rs  redis.rs
Rust/library-service/src/dal/: book.rs  database.rs  loan.rs  mod.rs  user.rs
Rust/library-service/src/kafka/: mod.rs
Rust/library-service/src/routes/: auth_route.rs  book.rs  loan.rs  mod.rs  user.rs
Rust/library-service/src/service/: book.rs  loan.rs  mod.rs  user.rs
Rust/library-service/tests/: auth_test.rs  cache_test.rs  integration_test.rs  lib.rs  unit_test.rs
Rust/pathcommander/src-tauri/: Cargo.toml  tauri.conf.json
Rust/pathcommander/src-tauri/capabilities/: default.json
Rust/pathcommander/src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
Rust/pathcommander/src-tauri/src/commands/: fs_ops.rs  fs_read.rs  fs_watch.rs  mod.rs
Rust/pathcommander/src-tauri/src/models/: file_entry.rs  mod.rs
Rust/pathcommander/src-tauri/src/plugins/: mod.rs
Rust/simple-dht/: Cargo.toml  README.md  test.md
Rust/simple-dht/src/: lib.rs  main.rs  node.rs  routing.rs  rpc.rs  storage.rs  tests.rs  utils.rs
Rust/simple-dht/tests/: e2e_tests.rs  integration_tests.rs
Scheme/: list_map_fold.scm  list_sorted_check.scm
TypeScript/: dijkstra_algorithm.ts  mortgage.real.rate.calculator.ts  tsconfig.json
(+708 files in other folders)
