[package]
name = "aes-cryptor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line AES encryption/decryption utility implemented from scratch"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.1" 