[package]
name = "cognitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
dirs = "5.0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
thiserror = "1.0.61"
anyhow = "1.0.82"
url = { version = "2.5.0", features = ["serde"] } # For URL parsing in context handling
serde_json = "1.0" # For parsing LLM plan responses

[dev-dependencies]
httpmock = "0.7"
serde_json = "1.0" # For executor tests
