[workspace]
members = [
    "elysium-core",
    "elysium-node",
    "elysium-client",
    "elysium-sdk",
]
resolver = "2"

[workspace.metadata]
examples = [
    "basic_usage",
    "sdk_usage",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"

