[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"
authors = ["Ferrite Team"]
description = "A lightweight, customizable terminal emulator"
license = "MIT"

[dependencies]
# GUI Framework
eframe = "0.26.0"
egui = "0.26.0"

# Terminal emulation
vte = "0.13.0"
termion = "2.0.1"

# Shell integration
nix = "0.27.0"
libc = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Platform detection
cfg-if = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23" 