[package]
name = "simple-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
