[package]
name = "elysium-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elysium-client"
path = "src/main.rs"

[dependencies]
elysium-core = { path = "../elysium-core" }
elysium-node = { path = "../elysium-node" }
tokio = { workspace = true }
anyhow = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-http-server = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

