[package]
name = "elysium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

