[package]
name = "elysium-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elysium-node"
path = "src/main.rs"

[dependencies]
elysium-core = { path = "../elysium-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

